tests/paczka1/small_fuzzy/99324990.err
Error in line 2: e71apZ5EBx A18 57,8
Error in line 1: wLotdBuqV A192 39,1
Error in line 8: wLotdBuqV S920 83,7
Error in line 11: wLotdBuqV A18 73,4
